config/base/conversations-apiserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conversations-apiserver
  namespace: patch-playground
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app: conversations-apiserver
